--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -20,7 +20,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     <title>{{ title }} | {{ theme.title }}</title>
     
     <!-- Mathjax -->
-    <script type="text/x-mathjax-config">MathJax.Hub.Config({text2jax: {inlineMath: [['$', '$'], ['\\(','\\)']]}});</script>
+    <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$', '$'], ['\\(','\\)']]}});</script>
     <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
 
     <!-- jQuery & jQuery UI -->
