Adjusting indicators visualization

--- a/dashboards/templates/dashboards/subjects_cloudy.html
+++ b/dashboards/templates/dashboards/subjects_cloudy.html
@@ -46,7 +46,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         ></i>
       </div>
       <div style="float:right">
-        {% trans 'Cloudy View' %}
+        {% trans 'Cloudy' %}
         <label class="switch">
           <input id="ganttPercent" type="checkbox" name="percentOn" checked onclick="view_toogle()" />
           <span class="slider round"></span>
