--- a/dashboards/templates/dashboards/subjects_cloudy.html
+++ b/dashboards/templates/dashboards/subjects_cloudy.html
@@ -67,7 +67,24 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
   <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" style="padding: 0px;">
     <hr style="height:2px; background-color:#bbb;margin-top: 0px;margin-bottom: 5px;" />
   </div>
-
+  <br clear="all" />
+  <div
+    id="tableHeader"
+    style="height: 60px; display: flex; justify-content: space-between; align-items: center; background: #eee; display: none"
+  >
+    <div style="height: 60px; display: flex; justify-content: center; align-items: center; width: 65%;">
+      <h3 style="margin-top: 10px">{% trans 'Tag' %}</h3>
+    </div>
+    <div
+      style="height: 60px; display: flex; width: 30%; flex-direction: column; align-items: center; justify-content: center; margin-right: 10px"
+    >
+      <h3 style="margin-top: 5px; margin-bottom: 2px;">{% trans 'Access' %}</h3>
+      <div style="display: flex; width: 100%; justify-content: space-around; border-top: 1px solid #333">
+        <span style="font-weight: bold">{% trans 'Yours' %}</span>
+        <span style="margin-right: 15px; font-weight: bold">{% trans 'Class' }</span>
+      </div>
+    </div>
+  </div>
   <div id="cloudy" style="padding: 0px" data-url="{{ tags_cloud }}">
     {% include 'dashboards/loading_ball.html' with tittle="cloudy_loading_ball" %}
   </div>
@@ -89,33 +106,34 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
           {% include 'dashboards/loading_ball.html' with tittle="modal_cloudy_loading_ball" %}
         </div>
         <div id="modal-table" style="display: none;">
-          <div id="table-container" class="table-responsive-sm">
+          <div id="table-container" class="table-responsive">
             <table class="table table-hover">
               <thead>
                 <tr>
+                  <th></th>
                   <th colspan="2" scope="col">Acessos</th>
                 </tr>
                 <tr>
+                  <th scope="col">Recurso</th>
                   <th scope="col">Seu</th>
                   <th scope="col">Turma</th>
-                  <th scope="col">Recurso</th>
                 </tr>
               </thead>
               <tbody>
                 <tr>
-                  <td>28%</td>
-                  <td>28%</td>
                   <td>Aulas Expositivas/ Exercicios(3ª Etapa)</td>
+                  <td>28%</td>
+                  <td>28%</td>
                 </tr>
                 <tr>
-                  <td>28%</td>
-                  <td>28%</td>
                   <td>Aula 12</td>
+                  <td>28%</td>
+                  <td>28%</td>
                 </tr>
                 <tr>
-                  <td>14%</td>
-                  <td>14%</td>
                   <td>Aulas Expositivas/ Exercicios(1ª Etapa)</td>
+                  <td>14%</td>
+                  <td>14%</td>
                 </tr>
               </tbody>
             </table>
@@ -158,7 +176,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
       .attr("id", function(d, i) {
         return "page-table-" + i;
       })
-      .attr("class", "table table-hover page-table table-resources")
+      .attr("class", "table table-resources")
       .style("display", function(d, i) {
         return i != pageIndex ? "none" : "inherit";
       });
