Adjusting indicators visualization

--- a/dashboards/templates/dashboards/subjects_other_indicators.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators.html
@@ -32,6 +32,10 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     fill: #ffffff;
   }
 
+  .best-other-indicator {
+    fill: #009688;
+  }
+
   .rect-other-indicator {
     fill: #c8e6c9;
   }
@@ -59,9 +63,8 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
   }
 
   .back-max-indicator {
-    width: 42px;
+    width: 10px;
     height: 25px;
-    background-color: #009688;
   }
 
   .text-max-indicator {
@@ -280,11 +283,13 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 
   function view_toggle($selector) {
     if (!$selector.is(":checked")) {
-      $("#indicators-accordion").fadeOut("slow");
-      $("#indicators-table").fadeIn("slow");
+      $("#indicators-accordion").hide();
+      $(".indicators-legend").hide();
+      $("#indicators-table").show();
     } else {
-      $("#indicators-table").fadeOut("slow");
-      $("#indicators-accordion").fadeIn("slow");
+      $("#indicators-table").hide();
+      $(".indicators-legend").show();
+      $("#indicators-accordion").show();
     }
   }
 </script>
