--- a/dashboards/templates/dashboards/subjects_other_indicators_card.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators_card.html
@@ -26,13 +26,14 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
       <rect class="back-other-indicator" width="3px" height="100%" x="40%"></rect>
       <rect class="back-other-indicator" width="3px" height="100%" x="60%"></rect>
       <rect class="back-other-indicator" width="3px" height="100%" x="80%"></rect>
+      <rect class="best-other-indicator" width="7%" height="100%" x="93%"></rect>
       <text class="text-your-indicator" dx="-5px" dy="0.4em" y="50%"></text>
     </svg>
 
     <div class="back-max-indicator">
       <svg>
         <g class="star-container">
-          <g class="golden-star" transform="translate(22,12.5)scale(11,11)rotate(18)" opacity="0">
+          <g class="golden-star" transform="translate(8,12.5)scale(11,11)rotate(18)" opacity="0">
             <path
               fill="#FF8E01"
               d="M -0.850646,0 L -0.262491,-0.190708 -0.262867,-0.809012 0.10026,-0.308574 0.688191,-0.499997 0.324457,0 0.688191,0.499997 0.10026,0.308574 -0.262867,0.809012 -0.262491,0.190708 z"
