Adjusting tag cloud resources list presentation

--- a/dashboards/templates/dashboards/subjects_other_indicators.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators.html
@@ -95,6 +95,21 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     margin: 5px;
     margin-bottom: 0px;
   }
+  .page-item {
+    border: 1px solid #ccc;
+    padding: 3px 7px;
+    cursor: pointer;
+  }
+  .page-item:hover {
+    color: #fff;
+    background: #009688;
+    border-color: #009688;
+  }
+  .page-item.active {
+    background: #009688;
+    color: #fff;
+    border-color: #009688;
+  }
 </style>
 
 <div class="col-md-4 col-xs-12 col-sm-8 col-lg-4">
