--- a/dashboards/templates/dashboards/subjects_other_indicators.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators.html
@@ -163,7 +163,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
         <thead>
           <tr>
             <th></th>
-            <th colspan="2">{% trans 'Values reached' %}</th>
+            <th colspan="2" style="text-align: center">{% trans 'Values reached' %}</th>
           </tr>
           <tr>
             <th></th>
