--- a/dashboards/templates/dashboards/subjects_cloudy.html
+++ b/dashboards/templates/dashboards/subjects_cloudy.html
@@ -81,7 +81,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
       <h3 style="margin-top: 5px; margin-bottom: 2px;">{% trans 'Access' %}</h3>
       <div style="display: flex; width: 100%; justify-content: space-around; border-top: 1px solid #333">
         <span style="font-weight: bold">{% trans 'Yours' %}</span>
-        <span style="margin-right: 15px; font-weight: bold">{% trans 'Class' }</span>
+        <span style="margin-right: 15px; font-weight: bold">{% trans 'Class' %}</span>
       </div>
     </div>
   </div>
