Adjusting matlab presentation

--- a/amadeus/templates/base.html
+++ b/amadeus/templates/base.html
@@ -20,9 +20,16 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     <title>{{ title }} | {{ theme.title }}</title>
     
     <!-- Mathjax -->
-    <script type="text/x-mathjax-config">MathJax.Hub.Config({tex2jax: {inlineMath: [['$', '$'], ['\\(','\\)']]}});</script>
-    <script src="https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-
+    <script>
+        MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']]
+            }
+        };
+    </script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
+    
     <!-- jQuery & jQuery UI -->
     <script type="text/javascript" src="{% static 'js/jquery-3.1.0.min.js' %}"></script>
     <script type="text/javascript" src="{% static 'js/jquery-ui.js' %}"></script>
