--- a/dashboards/templates/dashboards/subjects.html
+++ b/dashboards/templates/dashboards/subjects.html
@@ -16,96 +16,84 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 {% load django_bootstrap_breadcrumbs %}
 
 {% block style %}
-{% for file in style_files %}
-<link rel="stylesheet" type="text/css" href="{% static file %}">
-{% endfor %}
+    {% for file in style_files %}
+        <link rel="stylesheet" type="text/css" href="{% static file %}">
+    {% endfor %}
 {% endblock style %}
 
 {% block javascript %}
+    {% include "dashboards/d3_translate.html" %}
 
-<!--https://d3js.org/d3.v5.min.js-->
-{% include "dashboards/d3_translate.html" %}
+    <script src="{% static 'analytics/js/JSUtil.js' %}"></script>
 
-<script src="{% static 'analytics/js/JSUtil.js' %}"></script>
-
-{% for file in javascript_files %}
-<script type="text/javascript" src="{% static file %}"></script>
-{% endfor %}
-
+    {% for file in javascript_files %}
+        <script type="text/javascript" src="{% static file %}"></script>
+    {% endfor %}
 {% endblock javascript %}
 
 {% block breadcrumbs %}
-{{ block.super }}
+    {{ block.super }}
 
-{% trans "Analytics" as bread %}
-{% breadcrumb bread 'dashboards:view_subject' subject.slug %}
+    {% trans "Analytics" as bread %}
+    {% breadcrumb bread 'dashboards:view_subject' subject.slug %}
 {% endblock %}
 
 {% block content %}
-{% subject_permissions request.user subject as has_subject_permissions %}
+    {% subject_permissions request.user subject as has_subject_permissions %}
 
-{% if has_subject_permissions %}
-<form id="student_graph" action="" method="POST">
-    {% csrf_token %}
-    <select name="selected_student" onchange="$('#student_graph').submit();">
-        {% for stu in sub_students %}
-        <option value="{{ stu.email }}" {% if stu.email == student %} selected {% endif %}>{{ stu }}</option>
-        {% endfor %}
-    </select>
-</form>
-<br clear="all" />
-{% endif %}
+    {% if has_subject_permissions %}
+        <form id="student_graph" action="" method="POST">
+            {% csrf_token %}
+            
+            <select name="selected_student" class="form-control" onchange="$('#student_graph').submit();">
+                {% for stu in sub_students %}
+                    <option value="{{ stu.email }}" {% if stu.email == student %} selected {% endif %}>{{ stu }}</option>
+                {% endfor %}
+            </select>
+        </form>
+    {% endif %}
 
-<style>
-    .analytics-ungeneral {
-        background: #FFFFFF;
-        margin-bottom: 10px;
-    }
-    .graph-container{
-        padding: 0px;
-    }
-    .fa-info-circle{
-        padding-left:10px
-    }
-    .info-button{
-        padding:0px;
-        margin:0;
-    }
-    
-</style>
+    <div class="panel panel-info subject-panel" id="subject_{{subject.slug}}">
+        <div class="panel-heading">
+            <div class="row">
+                <div class="col-md-12 category-header">
+                    <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
+                        <span>{{subject.name}} / {% trans 'Analytics' %}</span>
+                    </h4>
 
-<div class="panel panel-info subject-panel" id="subject_{{subject.slug}}">
-    <div class="panel-heading">
-        <div class="row">
-            <div class="col-md-12 category-header">
-                <h4 class="panel-title" style="margin-top: 10px; margin-bottom: 8px">
-                    <span>{{subject.name}} / {% trans 'Analytics' %}</span>
-                </h4>
-
-                <div class="col-md-5 pull-right category-card-items">
+                    <div class="col-md-5 pull-right category-card-items">
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
-    <div id="{{subject.slug}}" class="panel-collapse panel-body in collapse analytics-ungeneral">
-        <!-- Dashboard -->
-        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 graph-container">
-        <div align="left" style="font-size:22px; color: #878787; padding-top: 0px; ">
-            {% trans 'In the last 7 days...'%}
+        <div id="{{subject.slug}}" class="panel-collapse panel-body in collapse analytics-ungeneral">
+            <!-- Dashboard -->
+            <div class="row">
+                <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 graph-container">
+                    <p style="font-size:22px; color: #878787; padding: 0px 10px;">
+                        {% trans 'In the last 7 days...'%}
+                    </p>
+                    
+                    <hr style="height:3px; background-color:#878787; margin: 5px 0px;">
+
+                    <div class="row">
+                        {% include "dashboards/subjects_cloudy.html" %}
+
+                        {% include "dashboards/subjects_other_indicators.html" %}
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">                
+                <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 graph-container">
+                    <p style="font-size:22px; color: #878787; padding: 0px 10px;">{% trans 'Your Essential Tasks'%}</p>
+                    
+                    <hr style="height:3px; background-color:#878787; margin: 5px 0px;">
+
+                    {% include "dashboards/subjects_gantt.html" %}
+                </div>
+            </div>
         </div>
-        <hr style="height:3px; background-color:#878787; margin-top: 5px;">
-
-        {% include "dashboards/subjects_cloudy.html" %}
-
-        {% include "dashboards/subjects_other_indicators.html" %}
-        </div>
-        <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 graph-container">
-            <div align="left" style="font-size:22px; color: #878787; padding-top: 0px; ">{% trans 'Your Essential Tasks'%}</div>
-            <hr style="height:3px; background-color:#878787; margin-top: 5px;">
-
-            {% include "dashboards/subjects_gantt.html" %}
-        </div>
-
     </div>
 
     <!--Responsibilities-->
@@ -121,10 +109,10 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
              }, 100);*/
         });
     </script>
-    {% endblock %}
+{% endblock %}
 
-    {% block addtional_scripts %}
+{% block addtional_scripts %}
     <script type="text/javascript">
         sessionSecurity.confirmFormDiscard = undefined;
     </script>
-    {% endblock %}
+{% endblock %}
