--- a/dashboards/templates/dashboards/subjects_cloudy.html
+++ b/dashboards/templates/dashboards/subjects_cloudy.html
@@ -16,27 +16,10 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 <script src="{% static 'analytics/js/d3.v3.min.js' %}"></script>
 <script src="{% static 'analytics/js/cloud.min.js' %}"></script>
 
-<style>
-  .cloudy-legend {
-    display: flex;
-  }
-  .icon-cloudy-legend {
-    width: 20px;
-    height: 16px;
-    margin-top: 5px;
-    margin-bottom: 4px;
-  }
-  .text-cloudy-legend {
-    height: 20px;
-    margin: 3px;
-    margin-bottom: 2px;
-  }
-</style>
-
 <div class="col-md-8 col-xs-12 col-sm-12 col-lg-8">
-  <div style="padding-left: 10px; ">
-    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" style=" padding-left: 10px; ">
-      <div style="float:left; font-size:16px; text-align:left; color: #000;">
+  <div class="row cloudy-header">
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-title-bar">
+      <div class="cloudy-title">
         <b>{% trans 'Most Popular Tags' %}</b>
         <i
           class="fa fa-info-circle"
@@ -45,7 +28,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
           title="{% trans 'Compare your number of hits with the number of hits in each class tag in this subject' %}"
         ></i>
       </div>
-      <div style="float:right">
+      <div class="hidden-xs hidden-sm">
         {% trans 'Cloudy' %}
         <label class="switch">
           <input id="ganttPercent" type="checkbox" name="percentOn" checked onclick="view_toogle()" />
@@ -54,22 +37,16 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
       </div>
     </div>
   </div>
-  <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" style="padding: 0px;">
-    <hr style="height:2px; background-color:#878787;margin-top: 5px;margin-bottom: 0px;" />
+  <div class="row cloudy-header hidden-xs hidden-sm">
+    <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-legend">
+      <i id="cloudy-icon" class="fa fa-text-height icon-cloudy-legend" aria-hidden="true"></i>
+      <p class="text-cloudy-legend">{% trans 'Class accesses' %}</p>
+      <div class="icon-cloudy-legend" style="background-image: linear-gradient(to right, #162318 , #8EC99A); "></div>
+      <p class="text-cloudy-legend">{% trans 'Your accesses' %}</p>
+    </div>
   </div>
-  <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12 cloudy-legend">
-    <i id="cloudy-icon" class="fa fa-text-height icon-cloudy-legend" aria-hidden="true"></i>
-    <p class="text-cloudy-legend">{% trans 'Class accesses' %}</p>
-    <div style="width:20px; height: 10px;"></div>
-    <div class="icon-cloudy-legend" style="background-image: linear-gradient(to right, #162318 , #8EC99A); "></div>
-    <p class="text-cloudy-legend">{% trans 'Your accesses' %}</p>
-  </div>
-  <div class="col-md-12 col-xs-12 col-sm-12 col-lg-12" style="padding: 0px;">
-    <hr style="height:2px; background-color:#bbb;margin-top: 0px;margin-bottom: 5px;" />
-  </div>
-  <br clear="all" />
   <div
-    id="tableHeader"
+    id="tableHeader" class="hidden-xs hidden-sm"
     style="height: 60px; display: flex; justify-content: space-between; align-items: center; background: #eee; display: none"
   >
     <div style="height: 60px; display: flex; justify-content: center; align-items: center; width: 65%;">
@@ -85,8 +62,29 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
       </div>
     </div>
   </div>
-  <div id="cloudy" style="padding: 0px" data-url="{{ tags_cloud }}">
+  <div id="cloudy" class="hidden-xs hidden-sm" style="padding: 0px" data-url="{{ tags_cloud }}">
     {% include 'dashboards/loading_ball.html' with tittle="cloudy_loading_ball" %}
+  </div>
+  <div class="visible-xs visible-sm table-responsive">
+    <table id="tag-access" class="table">
+      <thead>
+        <tr>
+          <th colspan="2"></th>
+          <th colspan="2" style="text-align: center">Acesso</th>
+        </tr>
+        <tr>
+          <th>Pos.</th>
+          <th>Tag</th>
+          <th>Seu</th>
+          <th>Maior da classe</th>
+        </tr>
+      </thead>
+      <tbody>
+      </tbody>
+    </table>
+    <nav aria-label="Table Navigation">
+      <ul id="tag-pagination" class="pagination"></ul>
+    </nav>
   </div>
 </div>
 
@@ -125,7 +123,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
             </table>
           </div>
           <nav aria-label="Table Navigation">
-            <ul class="pagination"></ul>
+            <ul id="resources_pag" class="pagination"></ul>
           </nav>
         </div>
       </div>
