--- a/dashboards/templates/dashboards/subjects_other_indicators_card.html
+++ b/dashboards/templates/dashboards/subjects_other_indicators_card.html
@@ -26,12 +26,12 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
       <rect class="back-other-indicator" width="3px" height="100%" x="40%"></rect>
       <rect class="back-other-indicator" width="3px" height="100%" x="60%"></rect>
       <rect class="back-other-indicator" width="3px" height="100%" x="80%"></rect>
-      <rect class="best-other-indicator" width="7%" height="100%" x="93%"></rect>
+      <rect class="best-other-indicator" width="1%" height="100%" x="99%"></rect>
       <text class="text-your-indicator" dx="-5px" dy="0.4em" y="50%"></text>
     </svg>
 
     <div class="back-max-indicator">
-      <svg>
+      <svg style="width: 20px">
         <g class="star-container">
           <g class="golden-star" transform="translate(8,12.5)scale(11,11)rotate(18)" opacity="0">
             <path
