--- a/questionary/templates/questionary/window_view.html
+++ b/questionary/templates/questionary/window_view.html
@@ -17,6 +17,17 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
 <html>
 <head>
 	<title>{{ title }} | {{ theme.title }}</title>
+	
+	<!-- Mathjax -->
+    <script>
+        MathJax = {
+            tex: {
+                inlineMath: [['$', '$'], ['\\(', '\\)']]
+            }
+        };
+    </script>
+    <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
+    <script id="MathJax-script" async src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js"></script>
 
 	<script type="text/javascript" src="{% static 'js/jquery-3.1.0.min.js' %}"></script>
 
