--- a/dashboards/templates/dashboards/subjects_cloudy.html
+++ b/dashboards/templates/dashboards/subjects_cloudy.html
@@ -55,7 +55,7 @@ Você deve ter recebido uma cópia da Licença Pública Geral GNU, sob o título
     <div
       style="height: 60px; display: flex; width: 30%; flex-direction: column; align-items: center; justify-content: center; margin-right: 10px"
     >
-      <h3 style="margin-top: 5px; margin-bottom: 2px;">{% trans 'Access' %}</h3>
+      <h3 style="margin-top: 5px; margin-bottom: 2px;">{% trans 'Accessess' %}</h3>
       <div style="display: flex; width: 100%; justify-content: space-around; border-top: 1px solid #333">
         <span style="font-weight: bold">{% trans 'Yours' %}</span>
         <span style="margin-right: 15px; font-weight: bold">{% trans 'Class' %}</span>
